# engrama

./: .env.example  .gitignore  .lycheeignore  404.html  ARCHITECTURE.md  BACKENDS.md  CHANGELOG.md  CONTRIBUTING.md  DDR-001.md  DDR-003.md  DDR-004.md  DDR-template.md  GLOSARIO_ES.md  GRAPH-SCHEMA.md  LICENSE  README.md  README_ES.md  RELEASING.md  ROADMAP.md  VISION.md  docker-compose.yml  engrama-onboard.skill  engrama-system-prompt-v0.4.md  engrama-system-prompt-v0.5.md  index.html  mcp.json  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  docs.yml  links.yml  release.yml
_obsidian_mcp_ref/: obsidian-mcp.py
architecture/: index.html
backends/: index.html
changelog/: index.html
contributing/: index.html
ddr-001/: index.html
ddr-002/: index.html
ddr-003/: index.html
ddr-004/: index.html
ddr-template/: index.html
docs/: architecture.es.md  architecture.md  backends.es.md  backends.md  changelog.md  contributing.es.md  ddr-001.es.md  ddr-002.es.md  ddr-002.md  ddr-003.es.md  ddr-003.md  ddr-004.es.md  ddr-004.md  ddr-template.es.md  ddr-template.md  glosario.md  glosario_es.md  graph-schema.es.md  graph-schema.md  index.es.md  index.md  portable-storage-spec.md  readme_es.md  releasing.es.md  releasing.md  roadmap.es.md  roadmap.md  security.es.md  security.md  vision.es.md  vision.md
docs/incidents/: 2026-05-25-cold-start-silent-embedding.md
docs/reference/: faceted-classification.md  node-schema.md  query-patterns.md  sync-contract.md  temporal.md
docs/saas/: streamable-http.es.md  streamable-http.md
docs/stylesheets/: tokyo-night.css
engrama/: __init__.py  cli.py  migrate.py
engrama/adapters/: __init__.py
engrama/adapters/mcp/: __init__.py  http.py  server.py
engrama/adapters/obsidian/: __init__.py  adapter.py  parser.py  sync.py
engrama/adapters/sdk/: __init__.py
engrama/backends/: __init__.py  null.py
engrama/backends/neo4j/: __init__.py  _cypher.py  _lucene.py  async_store.py  backend.py  schema.cypher  vector.py
engrama/backends/sqlite/: __init__.py  async_store.py  schema.sql  store.py  vector.py
engrama/bench/: __init__.py  core.py  locomo.py  longmemeval.py  report.py  runner.py  scoring.py
engrama/core/: __init__.py  client.py  engine.py  identity.py  protocols.py  rerank.py  schema.py  scope.py  search.py  security.py  temporal.py  text.py
engrama/embeddings/: __init__.py  health.py  null.py  ollama.py  openai_compat.py  text.py
engrama/ingest/: __init__.py
engrama/skills/: __init__.py  associate.py  forget.py  proactive.py  recall.py  reflect.py  remember.py
engrama/skills/onboard/: SKILL.md
engrama/skills/onboard/references/: example-profiles.md
engrama/skills/onboard/scripts/: generate_from_profile.py
examples/: README.md
examples/claude_desktop/: config.dev.json  config.json  system-prompt.md
examples/langchain_agent/: example.py
examples/python_sdk/: quickstart.py
glosario_es/: index.html
graph-schema/: index.html
portable-storage-spec/: index.html
profiles/: base.yaml  developer.yaml
profiles/modules/: ai.yaml  hacking.yaml  photography.yaml  teaching.yaml
readme_es/: index.html
reference/system-prompts/v0.4/: index.html
reference/system-prompts/v0.5/: index.html
releasing/: index.html
roadmap/: index.html
scripts/: bench_search_context.py  check_scoped_queries.py  generate_from_profile.py  init-schema.cypher
search/: search_index.json
security/: index.html
tests/: conftest.py  test_adapters.py  test_bench.py  test_cli.py  test_cli_label_validation.py  test_cold_start_embedding_repro.py  test_composable.py  test_context_scope_isolation.py  test_core.py  test_cypher_identifier_escape.py  test_embeddings.py  test_export_import.py  test_export_import_cross_backend.py  test_hybrid_search.py  test_identity.py  test_inline_relations_validation.py  test_lucene_escape.py  test_mcp_entrypoint.py  test_mcp_error_redaction.py  test_mcp_gdpr_forget.py  test_mcp_http.py  test_mcp_logging_scope.py  test_mcp_remember_fixes.py  test_mcp_remember_merge_key.py  test_mcp_search_ranking.py  test_mcp_status.py  test_mcp_sync_dry_run.py  test_merge_key_canonical.py  test_migrate_keys.py  test_neo4j_schema_packaging.py  test_neo4j_store.py  test_no_unscoped_match.py  test_obsidian_sync.py  test_openai_compat_embedder.py  test_phase4_skills.py  test_proactive.py  test_proactive_insight_gate.py  test_protocols.py  test_provenance.py  test_reindex_tool.py  (+18 more)
tests/backends/: test_degenerate_embeddings.py  test_sqlite.py  test_sqlite_async.py  test_sqlite_vector.py
tests/contracts/: test_async_graphstore_contract.py  test_graphstore_contract.py
tests/data/: locomo_mini.json  longmemeval_mini.json
vision/: index.html
