[project]
name = "engrama"
version = "0.1.0"
description = "Graph-based long-term memory framework for AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["ai", "agents", "memory", "neo4j", "graph", "mcp", "knowledge-graph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "sqlite-vec>=0.1",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
neo4j = ["neo4j>=5.26.0"]
embeddings = ["httpx>=0.27"]
mcp = ["mcp>=1.8", "fastmcp>=2.10.5,<3", "httpx>=0.27"]
langchain = ["langchain>=0.2", "langchain-community>=0.2"]
rest = ["fastapi>=0.110", "uvicorn>=0.29"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
all = ["engrama[neo4j,embeddings,mcp,langchain,rest,dev]"]

[project.scripts]
engrama = "engrama.cli:main"
engrama-mcp = "engrama.adapters.mcp:main"

[project.urls]
Homepage = "https://github.com/scops/engrama"
Repository = "https://github.com/scops/engrama"
Issues = "https://github.com/scops/engrama/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
