[project]
name = "engrama"
version = "0.10.0"
description = "Graph-based long-term memory framework for AI agents (SQLite default, Neo4j optional)"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
keywords = ["ai", "agents", "memory", "knowledge-graph", "sqlite", "neo4j", "mcp", "graph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "sqlite-vec>=0.1",
    "httpx>=0.27",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
neo4j = ["neo4j>=5.26.0"]
mcp = ["mcp>=1.8", "fastmcp>=2.10.5,<3"]
langchain = ["langchain>=0.2", "langchain-community>=0.2"]
rest = ["fastapi>=0.110", "uvicorn>=0.29"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
all = ["engrama[neo4j,mcp,langchain,rest,dev]"]

[project.scripts]
engrama = "engrama.cli:main"
engrama-mcp = "engrama.adapters.mcp:main"

[project.urls]
Homepage = "https://github.com/scops/engrama"
Repository = "https://github.com/scops/engrama"
Issues = "https://github.com/scops/engrama/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
# schema.py is auto-generated by scripts/generate_from_profile.py.
# UP042 (use enum.StrEnum instead of (str, Enum)) is a stylistic
# preference that should be fixed in the generator template, not in
# the emitted file (otherwise the next regeneration reverts the fix).
"engrama/core/schema.py" = ["UP042"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
